--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title> Api News Project</title>
     <link rel="stylesheet" href="Search-news.css">
+    <link rel="icon" type="image/png" href="/path/to/your-icon.png">
 </head>
 
 
