--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title> Api News Project</title>
     <link rel="stylesheet" href="Search-news.css">
-    <link rel="icon" type="image/png" href="/path/to/your-icon.png">
+<!--     <link rel="icon" type="image/png" href="/path/to/your-icon.png"> -->
 </head>
 
 
