--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title> Api News Project</title>
     <link rel="stylesheet" href="Search-news.css">
-<!--     <link rel="icon" type="image/png" href="/path/to/your-icon.png"> -->
+    <!-- Option 1: Add a favicon link (place in <head>) -->
+<link rel="icon" href="favicon.ico" type="image/x-icon">
+
+<!-- Option 2: Disable favicon request (for development) -->
+<link rel="icon" href="data:,">
 </head>
 
 
